--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,3 +67,27 @@ csv.header.string =  ${?csv.header.string}
 
 api.metrics = false
 api.metrics = ${?api.metrics}
+
+
+
+artifactory {
+  publish-init = false
+  publish-init = ${?BI_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
+  publish-repository = "https://Unused/transient/repository"
+  publish-repository = ${?BI_PUBLISH_ARTIFACTORY_NAME}
+  host = "Unknown Artifactory host"
+  host = ${?BI_PUBLISH_ARTIFACTORY_HOST_NAME}
+  user = "Unknown username"
+  user = ${?BI_PUBLISH_ARTIFACTORY_USER_NAME}
+  password = "Unknown password"
+  password = ${?BI_PUBLISH_ARTIFACTORY_PASSWORD}
+}
+
+circuit-breaker {
+  failure.threshold = 1
+  failure.threshold = ${?SBR_CIRCUIT_BREAKER_FAILURE_THRESHOLD}
+  failure.declaration.time = 10
+  failure.decalration.time = ${?SBR_CIRCUIT_BREAKER_FAILURE_DECLARATION_TIME}
+  reset.timeout = 1
+  reset.timeout = ${?SBR_CIRCUIT_BREAKER_RESET_TIMEOUT}
+}
