Feature/scala controller (#4)
* Add code for scala controller

- Copied from prior work in ONSDigital/sbr-admin-data-poc
- Includes caching and a circuitbreaker

* Change log levels back to info

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,9 +44,10 @@ play.i18n.langs = [ "en" ]
 # You can disable evolutions if needed
 # evolutionplugin=disabled
 
-# disable the built in filters
-play.http.filters = play.api.http.NoHttpFilters
+# Filters
+play.http.filters = filters.Filters
 
+# Thread Pools
 admin-data-repository {
   executor = "thread-pool-executor"
   throughput = 1
@@ -55,16 +56,33 @@ admin-data-repository {
   }
 }
 
+# Caching
+cache.admin_data.duration = 60
+cache.admin_data.duration = ${?cache.admin_data.duration}
+cache.default_period.duration = 60
+cache.default_period.duration = ${?cache.default_period.duration}
+
+# Circuit Breaker
+circuit_breaker.maxFailures = 5
+circuit_breaker.maxFailures = ${?circuit_breaker.maxFailures}
+circuit_breaker.callTimeout = 1
+circuit_breaker.callTimeout = ${?circuit_breaker.callTimeout}
+circuit_breaker.resetTimeout = 10
+circuit_breaker.resetTimeout = ${?circuit_breaker.resetTimeout}
+
+# Database
 database.table = "admin_data"
 database.table = ${?hbase.table}
-
 database.in.memory = true
 database.in.memory = ${?database.in.memory}
+
+# CSV File Load
 csv.file = "conf/sample/201706/ch-data.csv"
 csv.file = ${?csv.file}
 csv.header.string = "companyname"
 csv.header.string =  ${?csv.header.string}
 
+# Metrics
 api.metrics = false
 api.metrics = ${?api.metrics}
 
