Minor tidy up and added empty AminDataControllerUtils

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,7 +45,8 @@ play.i18n.langs = [ "en" ]
 # evolutionplugin=disabled
 
 # disable the built in filters
-play.http.filters = play.api.http.NoHttpFilters
+# Filters
+play.http.filters = filters.Filters
 
 admin-data-repository {
   executor = "thread-pool-executor"
@@ -56,17 +57,17 @@ admin-data-repository {
 }
 
 database.table = "admin_data"
-database.table = ${?hbase.table}
+database.table = ${?HBASE_TABLE}
 
 database.in.memory = true
-database.in.memory = ${?database.in.memory}
+database.in.memory = ${?DB_IN_MEMORY}
 csv.file = "conf/sample/201706/ch-data.csv"
-csv.file = ${?csv.file}
+csv.file = ${?CSV_FILE}
 csv.header.string = "companyname"
-csv.header.string =  ${?csv.header.string}
+csv.header.string =  ${?CSV_HEADER_STRING}
 
 api.metrics = false
-api.metrics = ${?api.metrics}
+api.metrics = ${?API_METRICS}
 
 
 
