Add refactored scala AdminDataController
- Remove getDefaultPeriod, can pass a None into repo.lookup
- Remove /scala/ part of routes
- Add /config with configuration using typesafe config (no longer inject it in)
- Remove scalaz from build.sbt
- Refactor LookupValidator to use Either from the std lib rather than scalaz
- Remove getOrElse when getting configuration settings
- Move circuit breaker into ControllerUtils

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,8 @@ cache.admin_data.duration = 60
 cache.admin_data.duration = ${?cache.admin_data.duration}
 cache.default_period.duration = 60
 cache.default_period.duration = ${?cache.default_period.duration}
+cache.admin_data.delimiter = "~"
+cache.admin_data.delimiter = ${?cache.admin_data.delimiter}
 
 # Circuit Breaker
 circuit_breaker.maxFailures = 5
