--- a/conf/application.conf
+++ b/conf/application.conf
@@ -105,10 +105,10 @@ artifactory {
 }
 
 circuit-breaker {
-  failure.threshold = 3
-  failure.threshold = ${?SBR_CIRCUIT_BREAKER_FAILURE_THRESHOLD}
-  failure.declaration.time = 10
-  failure.decalration.time = ${?SBR_CIRCUIT_BREAKER_FAILURE_DECLARATION_TIME}
-  reset.timeout = 1
-  reset.timeout = ${?SBR_CIRCUIT_BREAKER_RESET_TIMEOUT}
+  maxFailures = 5
+  maxFailures = ${?SBR_CIRCUIT_BREAKER_MAX_FAILURES}
+  callTimeout = 10
+  callTimeout = ${?SBR_CIRCUIT_BREAKER_FAILURE_CALL_TIMEOUT}
+  resetTimeout = 1
+  resetTimeout = ${?SBR_CIRCUIT_BREAKER_RESET_TIMEOUT}
 }
