Add env var for id regex
- Pass in regex as ID_REGEX environment variable
- Fix tests (that involve invalid ids)
- Rename test file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,8 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="%APPLICATION_SECRET%"
+application.secret = "%APPLICATION_SECRET%"
+application.secret = ${?application.secret}
 
 # The application languages
 # ~~~~~
@@ -56,22 +57,6 @@ admin-data-repository {
   }
 }
 
-# Caching
-cache.admin_data.duration = 60
-cache.admin_data.duration = ${?cache.admin_data.duration}
-cache.default_period.duration = 60
-cache.default_period.duration = ${?cache.default_period.duration}
-cache.admin_data.delimiter = "~"
-cache.admin_data.delimiter = ${?cache.admin_data.delimiter}
-
-# Circuit Breaker
-circuit_breaker.maxFailures = 5
-circuit_breaker.maxFailures = ${?circuit_breaker.maxFailures}
-circuit_breaker.callTimeout = 1
-circuit_breaker.callTimeout = ${?circuit_breaker.callTimeout}
-circuit_breaker.resetTimeout = 10
-circuit_breaker.resetTimeout = ${?circuit_breaker.resetTimeout}
-
 # Database
 database.table = "admin_data"
 database.table = ${?HBASE_TABLE}
@@ -89,8 +74,6 @@ csv.header.string =  ${?CSV_HEADER_STRING}
 api.metrics = false
 api.metrics = ${?API_METRICS}
 
-
-
 artifactory {
   publish-init = false
   publish-init = ${?BI_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
@@ -104,11 +87,26 @@ artifactory {
   password = ${?BI_PUBLISH_ARTIFACTORY_PASSWORD}
 }
 
-circuit-breaker {
+# Circuit-breaker
+circuitBreaker {
   maxFailures = 5
-  maxFailures = ${?SBR_CIRCUIT_BREAKER_MAX_FAILURES}
+  maxFailures = ${?CIRCUIT_BREAKER_MAX_FAILURES}
   callTimeout = 2
-  callTimeout = ${?SBR_CIRCUIT_BREAKER_FAILURE_CALL_TIMEOUT}
+  callTimeout = ${?CIRCUIT_BREAKER_FAILURE_CALL_TIMEOUT}
   resetTimeout = 1
-  resetTimeout = ${?SBR_CIRCUIT_BREAKER_RESET_TIMEOUT}
+  resetTimeout = ${?CIRCUIT_BREAKER_RESET_TIMEOUT}
+}
+
+# Caching
+cache {
+  duration = 60
+  duration = ${?CACHE_DURATION}
+  delimiter = "~"
+  delimiter = ${?CACHE_DELIMITER}
+}
+
+# Validation
+validation {
+  idRegex = ".{3,8}"
+  idRegex = ${?ID_REGEX}
 }
