Add table of env vars to the README
- Change some env var names in application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -90,23 +90,23 @@ artifactory {
 # Circuit-breaker
 circuitBreaker {
   maxFailures = 5
-  maxFailures = ${?CIRCUIT_BREAKER_MAX_FAILURES}
+  maxFailures = ${?cb.maxFailures}
   callTimeout = 2
-  callTimeout = ${?CIRCUIT_BREAKER_FAILURE_CALL_TIMEOUT}
+  callTimeout = ${?cb.callTimeout}
   resetTimeout = 1
-  resetTimeout = ${?CIRCUIT_BREAKER_RESET_TIMEOUT}
+  resetTimeout = ${?cb.resetTimeout}
 }
 
 # Caching
 cache {
   duration = 60
-  duration = ${?CACHE_DURATION}
+  duration = ${?cache.duration}
   delimiter = "~"
-  delimiter = ${?CACHE_DELIMITER}
+  delimiter = ${?cache.delimiter}
 }
 
 # Validation
 validation {
   idRegex = ".{3,8}"
-  idRegex = ${?ID_REGEX}
+  idRegex = ${?validation.id}
 }
