Changed BulkLoaderTest to scala and added start of SCAN func with key range

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,7 +48,7 @@ play.i18n.langs = [ "en" ]
 play.http.filters = filters.Filters
 
 # Thread Pools
-admin-data-repository {
+admin-data-hbase.repository {
   executor = "thread-pool-executor"
   throughput = 1
   thread-pool-executor {
@@ -94,8 +94,8 @@ api.metrics = ${?API_METRICS}
 artifactory {
   publish-init = false
   publish-init = ${?BI_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
-  publish-repository = "https://Unused/transient/repository"
-  publish-repository = ${?BI_PUBLISH_ARTIFACTORY_NAME}
+  publish-hbase.repository = "https://Unused/transient/hbase.repository"
+  publish-hbase.repository = ${?BI_PUBLISH_ARTIFACTORY_NAME}
   host = "Unknown Artifactory host"
   host = ${?BI_PUBLISH_ARTIFACTORY_HOST_NAME}
   user = "Unknown username"
