--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,9 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+# Swagger API Documentation
+play.modules.enabled += "play.modules.swagger.SwaggerModule"
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
