Added Rest setup and switched off inmemory by default

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -76,7 +76,7 @@ circuit_breaker.resetTimeout = ${?circuit_breaker.resetTimeout}
 database.table = "admin_data"
 database.table = ${?HBASE_TABLE}
 
-database.in.memory = true
+database.in.memory = false
 database.in.memory = ${?DB_IN_MEMORY}
 
 # CSV File Load
@@ -111,4 +111,21 @@ circuit-breaker {
   failure.decalration.time = ${?SBR_CIRCUIT_BREAKER_FAILURE_DECLARATION_TIME}
   reset.timeout = 1
   reset.timeout = ${?SBR_CIRCUIT_BREAKER_RESET_TIMEOUT}
+}
+
+
+hbase {
+  authentication.username = "username"
+  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
+
+  authentication.password = "password"
+  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
+
+  rest.endpoint = "http://localhost:8080"
+  rest.endpoint = ${?HBASE_REST_ENDPOINT}
+}
+
+ws {
+  request.timeout = 15000
+  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
 }
