--- a/repository-hbase/src/test/resources/application.conf
+++ b/repository-hbase/src/test/resources/application.conf
@@ -2,3 +2,19 @@ admin-data-repository {
   executor = "thread-pool-executor"
   type = PinnedDispatcher
 }
+
+hbase {
+  authentication.username = "username"
+  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
+
+  authentication.password = "password"
+  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
+
+  rest.endpoint = "http://localhost:8080"
+  rest.endpoint = ${?HBASE_REST_ENDPOINT}
+}
+
+ws {
+  request.timeout = 15000
+  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
+}
