--- a/conf/application.conf
+++ b/conf/application.conf
@@ -123,6 +123,13 @@ hbase {
 
   rest.endpoint = "http://localhost:8080"
   rest.endpoint = ${?HBASE_REST_ENDPOINT}
+
+  namespace = ""
+  namespace = ${?HBASE_REST_NAMESPACE}
+
+  table.name = "data"
+  table.name = ${?HBASE_REST_TABLE_NAME}
+
 }
 
 ws {
