--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,10 +162,16 @@ hbase {
   column.family = "d"
   column.family = ${?HBASE_REST_COLUMN_FAMILY}
 
-  namespace = ""
+//  namespace = ""
+//  namespace = ${?HBASE_REST_NAMESPACE}
+//
+//  table.name = "data"
+//  table.name = ${?HBASE_REST_TABLE_NAME}
+
+  namespace = "sbr_local_db"
   namespace = ${?HBASE_REST_NAMESPACE}
 
-  table.name = "data"
+  table.name = "enterprise"
   table.name = ${?HBASE_REST_TABLE_NAME}
 
 }
