REG-43 Got controller tests working from feature/scala-skeleton branch.  Refactored some components to ensure testability.  One example being of statically loading of config and instead re-using Guice-managed Configuration instance

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -95,13 +95,6 @@ admin-data-hbase.hbase.repository {
   }
 }
 
-# Database
-database.table = "admin_data"
-database.table = ${?HBASE_TABLE}
-
-database.in.memory = false
-database.in.memory = ${?DB_IN_MEMORY}
-
 # CSV File Load
 csv.file = "conf/sample/201706/ch-data.csv"
 csv.file = ${?CSV_FILE}
@@ -135,6 +128,8 @@ circuitBreaker {
   resetTimeout = ${?cb.resetTimeout}
 }
 
+akka.ask.timeout = 2 seconds
+
 # Caching
 cache {
   duration = 60
@@ -162,21 +157,17 @@ hbase {
   column.family = "d"
   column.family = ${?HBASE_REST_COLUMN_FAMILY}
 
-  namespace = ""
-  namespace = ${?HBASE_REST_NAMESPACE}
+  namespace = "sbr_local_db"
+  namespace = ${?HBASE_NAMESPACE}
 
-  table.name = "data"
-  table.name = ${?HBASE_REST_TABLE_NAME}
+  table.name = "admin_data"
+  table.name = ${?HBASE_TABLE_NAME}
 
-//  namespace = "sbr_local_db"
-//  namespace = ${?HBASE_REST_NAMESPACE}
-//
-//  table.name = "enterprise"
-//  table.name = ${?HBASE_REST_TABLE_NAME}
-
+  in.memory = false
+  in.memory = ${?DB_IN_MEMORY}
 }
 
-ws {
+play.ws {
   request.timeout = 15000
   request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
 }
