--- a/test/resources/application.test.conf
+++ b/test/resources/application.test.conf
@@ -1,6 +1,18 @@
 // Use the application.conf but override values
 include "application.conf"
 
-circuit-breaker.maxFailures = 5
-circuit-breaker.callTimeout = 40
-circuit-breaker.resetTimeout = 40
+play.cache.createBoundCaches = false
+
+hbase {
+  in.memory = true
+  // In memory database does not support namespaces so set to empty string
+  namespace = ""
+}
+
+circuitBreaker {
+  maxFailures = 5
+  callTimeout = 110
+  resetTimeout = 40
+}
+
+akka.ask.timeout = 120 seconds
