Feature/h base rest (#23)
* Add code for scala controller

- Copied from prior work in ONSDigital/sbr-admin-data-poc
- Includes caching and a circuitbreaker

* Change log levels back to info

* Feature/model (#3)

* Modified build file inline with other sbr apis

* Added model code

* fixed buggy tests [temporary solution]

* Feature/scala controller (#4)

* Add code for scala controller

- Copied from prior work in ONSDigital/sbr-admin-data-poc
- Includes caching and a circuitbreaker

* Change log levels back to info

* changed spec scheme PlaySpec -> FlatSpec (#5)

* Fix/convert flatspec (#6)

* changed spec scheme PlaySpec -> FlatSpec

* Updated Build.sbt

Removed unused scalatest-pus dep

* Fix left over merge errors

* Add fixes for migration from java -> scala model

- Using futures not completion stage
- Scala DateTime not Java
- Removed Java classes in controller
- Remove Java routes in routes file

* Added %provided on apache libs (now: provided in env) and merge strategy

* Minor tidy up and added empty AminDataControllerUtils

* Updated routes

Removed actual route with routes with scala sub path

* fixed route merge issue

* Remove circuitbreaker to get lookup working (#8)

* Add refactored Scala controller & validation model

- Currently unfinished

* Add refactored scala AdminDataController

- Remove getDefaultPeriod, can pass a None into repo.lookup
- Remove /scala/ part of routes
- Add /config with configuration using typesafe config (no longer inject it in)
- Remove scalaz from build.sbt
- Refactor LookupValidator to use Either from the std lib rather than scalaz
- Remove getOrElse when getting configuration settings
- Move circuit breaker into ControllerUtils

* Change controller name to AdminDataController

- Update routes file to point to correct controller

* Refactor AdminDataController, move methods to utils

* Update Controller to use non-depracated Messages API

* A

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,10 +44,46 @@ play.i18n.langs = [ "en" ]
 # You can disable evolutions if needed
 # evolutionplugin=disabled
 
-# disable the built in filters
-play.http.filters = play.api.http.NoHttpFilters
+## WS (HTTP Client)
+# https://www.playframework.com/documentation/latest/ScalaWS#Configuring-WS
+# ~~~~~
+# The HTTP client primarily used for REST APIs.  The default client can be
+# configured directly, but you can also create different client instances
+# with customized settings. You must enable this by adding to build.sbt:
+#
+# libraryDependencies += ws // or javaWs if using java
+#
+play.ws {
+  # Sets HTTP requests not to follow 302 requests
+  #followRedirects = false
 
-admin-data-repository {
+  # Sets the maximum number of open HTTP connections for the client.
+  #ahc.maxConnectionsTotal = 50
+
+  ## WS SSL
+  # https://www.playframework.com/documentation/latest/WsSSL
+  # ~~~~~
+  ssl {
+    # Configuring HTTPS with Play WS does not require programming.  You can
+    # set up both trustManager and keyManager for mutual authentication, and
+    # turn on JSSE debugging in development with a reload.
+    #debug.handshake = true
+    #trustManager = {
+    #  stores = [
+    #    { type = "JKS", path = "exampletrust.jks" }
+    #  ]
+    #}
+
+    loose.acceptAnyCertificate=true
+  }
+}
+
+
+# Filters
+play.http.filters = filters.Filters
+
+# Thread Pools
+admin-data-hbase.hbase.repository {
   executor = "thread-pool-executor"
   throughput = 1
   thread-pool-executor {
@@ -55,15 +91,86 @@ admin-data-repository {
   }
 }
 
+# Caching
+cache.admin_data.duration = 60
+cache.admin_data.duration = ${?cache.admin_data.duration}
+cache.default_period.duration = 60
+cache.default_period.duration = ${?cache.default_period.duration}
+cache.admin_data.delimiter = "~"
+cache.admin_data.delimiter = ${?cache.admin_data.delimiter}
+
+# Circuit Breaker
+circuit_breaker.maxFailures = 5
+circuit_breaker.maxFailures = ${?circuit_breaker.maxFailures}
+circuit_breaker.callTimeout = 1
+circuit_breaker.callTimeout = ${?circuit_breaker.callTimeout}
+circuit_breaker.resetTimeout = 10
+circuit_breaker.resetTimeout = ${?circuit_breaker.resetTimeout}
+
+# Database
 database.table = "admin_data"
-database.table = ${?hbase.table}
+database.table = ${?HBASE_TABLE}
 
-database.in.memory = true
-database.in.memory = ${?database.in.memory}
+database.in.memory = false
+database.in.memory = ${?DB_IN_MEMORY}
+
+# CSV File Load
 csv.file = "conf/sample/201706/ch-data.csv"
-csv.file = ${?csv.file}
+csv.file = ${?CSV_FILE}
 csv.header.string = "companyname"
-csv.header.string =  ${?csv.header.string}
+csv.header.string =  ${?CSV_HEADER_STRING}
 
+# Metrics
 api.metrics = false
-api.metrics = ${?api.metrics}
+api.metrics = ${?API_METRICS}
+
+
+
+artifactory {
+  publish-init = false
+  publish-init = ${?BI_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
+  publish-hbase.hbase.repository = "https://Unused/transient/hbase.hbase.repository"
+  publish-hbase.hbase.repository = ${?BI_PUBLISH_ARTIFACTORY_NAME}
+  host = "Unknown Artifactory host"
+  host = ${?BI_PUBLISH_ARTIFACTORY_HOST_NAME}
+  user = "Unknown username"
+  user = ${?BI_PUBLISH_ARTIFACTORY_USER_NAME}
+  password = "Unknown password"
+  password = ${?BI_PUBLISH_ARTIFACTORY_PASSWORD}
+}
+
+circuit-breaker {
+  failure.threshold = 3
+  failure.threshold = ${?SBR_CIRCUIT_BREAKER_FAILURE_THRESHOLD}
+  failure.declaration.time = 10
+  failure.declaration.time = ${?SBR_CIRCUIT_BREAKER_FAILURE_DECLARATION_TIME}
+  reset.timeout = 1
+  reset.timeout = ${?SBR_CIRCUIT_BREAKER_RESET_TIMEOUT}
+}
+
+
+hbase {
+  authentication.username = "username"
+  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
+
+  authentication.password = "password"
+  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
+
+  rest.endpoint = "http://localhost:8080"
+  rest.endpoint = ${?HBASE_REST_ENDPOINT}
+  
+  column.family = "d"
+  column.family = ${?HBASE_REST_COLUMN_FAMILY}
+
+  namespace = "sbr_local_db"
+  namespace = ${?HBASE_REST_NAMESPACE}
+
+  table.name = "enterprise"
+  table.name = ${?HBASE_REST_TABLE_NAME}
+
+}
+
+ws {
+  request.timeout = 15000
+  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
+}
