REG-43: Review and improve automated test coverage (#24)
* Add code for scala controller

- Copied from prior work in ONSDigital/sbr-admin-data-poc
- Includes caching and a circuitbreaker

* Change log levels back to info

* Feature/model (#3)

* Modified build file inline with other sbr apis

* Added model code

* fixed buggy tests [temporary solution]

* Feature/scala controller (#4)

* Add code for scala controller

- Copied from prior work in ONSDigital/sbr-admin-data-poc
- Includes caching and a circuitbreaker

* Change log levels back to info

* changed spec scheme PlaySpec -> FlatSpec (#5)

* Fix/convert flatspec (#6)

* changed spec scheme PlaySpec -> FlatSpec

* Updated Build.sbt

Removed unused scalatest-pus dep

* Fix left over merge errors

* Add fixes for migration from java -> scala model

- Using futures not completion stage
- Scala DateTime not Java
- Removed Java classes in controller
- Remove Java routes in routes file

* Added %provided on apache libs (now: provided in env) and merge strategy

* Minor tidy up and added empty AminDataControllerUtils

* Updated routes

Removed actual route with routes with scala sub path

* fixed route merge issue

* Remove circuitbreaker to get lookup working (#8)

* Add refactored Scala controller & validation model

- Currently unfinished

* Add refactored scala AdminDataController

- Remove getDefaultPeriod, can pass a None into repo.lookup
- Remove /scala/ part of routes
- Add /config with configuration using typesafe config (no longer inject it in)
- Remove scalaz from build.sbt
- Refactor LookupValidator to use Either from the std lib rather than scalaz
- Remove getOrElse when getting configuration settings
- Move circuit breaker into ControllerUtils

* Change controller name to AdminDataController

- Update routes file to point to correct controller

* Refactor AdminDataController, move methods to utils

* Update Controller to use non

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,11 +1,15 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+# Swagger API Documentation
+play.modules.enabled += "play.modules.swagger.SwaggerModule"
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="%APPLICATION_SECRET%"
+application.secret = "%APPLICATION_SECRET%"
+application.secret = ${?application.secret}
 
 # The application languages
 # ~~~~~
@@ -91,29 +95,6 @@ admin-data-hbase.hbase.repository {
   }
 }
 
-# Caching
-cache.admin_data.duration = 60
-cache.admin_data.duration = ${?cache.admin_data.duration}
-cache.default_period.duration = 60
-cache.default_period.duration = ${?cache.default_period.duration}
-cache.admin_data.delimiter = "~"
-cache.admin_data.delimiter = ${?cache.admin_data.delimiter}
-
-# Circuit Breaker
-circuit_breaker.maxFailures = 5
-circuit_breaker.maxFailures = ${?circuit_breaker.maxFailures}
-circuit_breaker.callTimeout = 1
-circuit_breaker.callTimeout = ${?circuit_breaker.callTimeout}
-circuit_breaker.resetTimeout = 10
-circuit_breaker.resetTimeout = ${?circuit_breaker.resetTimeout}
-
-# Database
-database.table = "admin_data"
-database.table = ${?HBASE_TABLE}
-
-database.in.memory = false
-database.in.memory = ${?DB_IN_MEMORY}
-
 # CSV File Load
 csv.file = "conf/sample/201706/ch-data.csv"
 csv.file = ${?CSV_FILE}
@@ -123,8 +104,6 @@ csv.header.string =  ${?CSV_HEADER_STRING}
 # Metrics
 api.metrics = false
 api.metrics = ${?API_METRICS}
-
-
 
 artifactory {
   publish-init = false
@@ -139,15 +118,31 @@ artifactory {
   password = ${?BI_PUBLISH_ARTIFACTORY_PASSWORD}
 }
 
-circuit-breaker {
-  failure.threshold = 3
-  failure.threshold = ${?SBR_CIRCUIT_BREAKER_FAILURE_THRESHOLD}
-  failure.declaration.time = 10
-  failure.declaration.time = ${?SBR_CIRCUIT_BREAKER_FAILURE_DECLARATION_TIME}
-  reset.timeout = 1
-  reset.timeout = ${?SBR_CIRCUIT_BREAKER_RESET_TIMEOUT}
+# Circuit-breaker
+circuitBreaker {
+  maxFailures = 5
+  maxFailures = ${?cb.maxFailures}
+  callTimeout = 2
+  callTimeout = ${?cb.callTimeout}
+  resetTimeout = 1
+  resetTimeout = ${?cb.resetTimeout}
 }
 
+akka.ask.timeout = 2 seconds
+
+# Caching
+cache {
+  duration = 60
+  duration = ${?cache.duration}
+  delimiter = "~"
+  delimiter = ${?cache.delimiter}
+}
+
+# Validation
+validation {
+  idRegex = ".{3,8}"
+  idRegex = ${?validation.id}
+}
 
 hbase {
   authentication.username = "username"
@@ -158,19 +153,21 @@ hbase {
 
   rest.endpoint = "http://localhost:8080"
   rest.endpoint = ${?HBASE_REST_ENDPOINT}
-  
+
   column.family = "d"
   column.family = ${?HBASE_REST_COLUMN_FAMILY}
 
   namespace = "sbr_local_db"
-  namespace = ${?HBASE_REST_NAMESPACE}
+  namespace = ${?HBASE_NAMESPACE}
 
-  table.name = "enterprise"
-  table.name = ${?HBASE_REST_TABLE_NAME}
+  table.name = "admin_data"
+  table.name = ${?HBASE_TABLE_NAME}
 
+  in.memory = false
+  in.memory = ${?DB_IN_MEMORY}
 }
 
-ws {
+play.ws {
   request.timeout = 15000
   request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
 }
