Fix HBaseAdminDataRepository test by fixing config file

--- a/repository-hbase/src/test/resources/application.conf
+++ b/repository-hbase/src/test/resources/application.conf
@@ -22,6 +22,11 @@ hbase {
   table.name = "data"
   table.name = ${?HBASE_REST_TABLE_NAME}
 
+  in.memory = true
+
+  // In memory database does not support namespaces so set to empty string
+  namespace = ""
+
 //  namespace = "sbr_local_db"
 //  namespace = ${?HBASE_REST_NAMESPACE}
 //
