Minor tidying of app config file and added swagger config filter file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,7 @@ play.ws {
 # Filters
 play.http.filters = filters.Filters
 
+
 # Thread Pools
 admin-data-hbase.hbase.repository {
   executor = "thread-pool-executor"
@@ -95,16 +96,32 @@ admin-data-hbase.hbase.repository {
   }
 }
 
+
+api.version = "alpha"
+swagger.filter = "SwaggerConfigurationFilter"
+swagger.api.info = {
+  title = "Statistical Business Register Admin Data API Group",
+  description = "One of the collection of Sbr Admin Data Apis",
+  contact = "SBR Support Team",
+  termsOfService = "https://www.ons.gov.uk/help/termsandconditions",
+  licence = "MIT",
+  licenceUrl = "https://github.com/ONSdigital/sbr-api/blob/master/LICENSE"
+}
+
+
 # CSV File Load
-csv.file = "conf/sample/201706/ch-data.csv"
-csv.file = ${?CSV_FILE}
-csv.header.string = "companyname"
-csv.header.string =  ${?CSV_HEADER_STRING}
+csv {
+  file = "conf/sample/201706/ch-data.csv"
+  file = ${?CSV_FILE}
+  header.string = "companyname"
+  header.string =  ${?CSV_HEADER_STRING}
+}
 
 # Metrics
 api.metrics = false
 api.metrics = ${?API_METRICS}
 
+# TODO: Tidy naming convention/ style
 artifactory {
   publish-init = false
   publish-init = ${?BI_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
@@ -119,52 +136,62 @@ artifactory {
 }
 
 # Circuit-breaker
-circuitBreaker {
-  maxFailures = 5
-  maxFailures = ${?cb.maxFailures}
-  callTimeout = 2
-  callTimeout = ${?cb.callTimeout}
-  resetTimeout = 1
-  resetTimeout = ${?cb.resetTimeout}
+circuit.breaker {
+  max.failures = 5
+  max.failures = ${?CIRCUIT_BREAKER_MAX_FAILURE}
+  call.timeout = 2
+  call.timeout = ${?CIRCUIT_BREAKER_CALL_TIMEOUT}
+  reset.timeout = 1
+  reset.timeout = ${?CIRCUIT_BREAKER_RESET_TIMEOUT}
 }
 
 akka.ask.timeout = 2 seconds
+akka.ask.timeout = ${?AKKA_TIMEOUT}
 
 # Caching
 cache {
   duration = 60
-  duration = ${?cache.duration}
+  duration = ${?CACHE_DURATION}
   delimiter = "~"
-  delimiter = ${?cache.delimiter}
+  delimiter = ${?CACHE_DELIMINTER}
 }
 
 # Validation
 validation {
-  idRegex = ".{3,8}"
-  idRegex = ${?validation.id}
+  id.regex = ".{3,8}"
+  id.regex = ${?VALIDATION_ID}
 }
 
 hbase {
-  authentication.username = "username"
-  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
+  authentication {
+    username = "username"
+    username = ${?HBASE_AUTHENTICATION_USERNAME}
 
-  authentication.password = "password"
-  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
-
-  rest.endpoint = "http://localhost:8080"
-  rest.endpoint = ${?HBASE_REST_ENDPOINT}
+    password = "password"
+    password = ${?HBASE_AUTHENTICATION_PASSWORD}
+  }
 
   column.family = "d"
   column.family = ${?HBASE_REST_COLUMN_FAMILY}
 
-  namespace = "sbr_local_db"
-  namespace = ${?HBASE_NAMESPACE}
-
   table.name = "admin_data"
   table.name = ${?HBASE_TABLE_NAME}
 
-  in.memory = false
-  in.memory = ${?DB_IN_MEMORY}
+  in.memory {
+    init = false
+    init = ${?HBASE_IN_MEMORY_INIT}
+
+    namespace = ""
+    namespace = ${?HBASE_IN_MEMORY_NAMESPACE}
+  }
+
+  rest {
+    namespace = "sbr_local_db"
+    namespace = ${?HBASE_REST_NAMESPACE}
+
+    endpoint = "http://localhost:8080"
+    endpoint = ${?HBASE_REST_ENDPOINT}
+  }
 }
 
 play.ws {
