Fixed repositoy test errors

--- a/repository-hbase/src/test/resources/application.conf
+++ b/repository-hbase/src/test/resources/application.conf
@@ -4,37 +4,39 @@ admin-data-repository {
 }
 
 hbase {
-  authentication.username = "username"
-  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
+  authentication {
+    username = "username"
+    username = ${?HBASE_AUTHENTICATION_USERNAME}
 
-  authentication.password = "password"
-  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
-
-  rest.endpoint = "http://localhost:8080"
-  rest.endpoint = ${?HBASE_REST_ENDPOINT}
+    password = "password"
+    password = ${?HBASE_AUTHENTICATION_PASSWORD}
+  }
 
   column.family = "d"
   column.family = ${?HBASE_REST_COLUMN_FAMILY}
 
-  namespace = ""
-  namespace = ${?HBASE_REST_NAMESPACE}
-
   table.name = "data"
-  table.name = ${?HBASE_REST_TABLE_NAME}
+  table.name = ${?HBASE_TABLE_NAME}
 
-  in.memory = true
+  in.memory {
+    init = false
+    init = ${?HBASE_IN_MEMORY_INIT}
 
-  // In memory database does not support namespaces so set to empty string
-  namespace = ""
+    namespace = ""
+    namespace = ${?HBASE_IN_MEMORY_NAMESPACE}
+  }
 
-//  namespace = "sbr_local_db"
-//  namespace = ${?HBASE_REST_NAMESPACE}
-//
-//  table.name = "enterprise"
-//  table.name = ${?HBASE_REST_TABLE_NAME}
+  rest {
+    namespace = "sbr_local_db"
+    namespace = ${?HBASE_REST_NAMESPACE}
+
+    endpoint = "http://localhost:8080"
+    endpoint = ${?HBASE_REST_ENDPOINT}
+  }
 }
 
-ws {
+
+play.ws {
   request.timeout = 15000
   request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
 }
