--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,8 +8,10 @@ play.modules.enabled += "play.modules.swagger.SwaggerModule"
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret = "%APPLICATION_SECRET%"
-application.secret = ${?application.secret}
+# application.secret = "%APPLICATION_SECRET%"
+# application.secret = ${?application.secret}
+play.crypto.secret = "changeme"
+play.crypto.secret = ${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
