REG-353 Got ApplicationSpec tests to launch in-memory hbase since the application no longer does so

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -165,8 +165,8 @@ hbase {
   table.name = "admin_data"
   table.name = ${?HBASE_TABLE_NAME}
 
-  in.memory = false
-  in.memory = ${?DB_IN_MEMORY}
+  initialize = false
+  initialize = ${?HBASE_INITIALISE_DB}
 }
 
 play.ws {
