--- a/test/resources/application.test.conf
+++ b/test/resources/application.test.conf
@@ -4,8 +4,8 @@ include "application.conf"
 play.cache.createBoundCaches = false
 
 hbase {
-  in.memory = true
-  // In memory database does not support namespaces so set to empty string
+  initialize = true
+  // In memory database used in tests does not support namespaces so set to empty string
   namespace = ""
 }
 
