--- a/repository-hbase/src/test/resources/application.conf
+++ b/repository-hbase/src/test/resources/application.conf
@@ -5,36 +5,15 @@ admin-data-repository {
 
 hbase {
   authentication.username = "username"
-  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
-
   authentication.password = "password"
-  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
-
   rest.endpoint = "http://localhost:8080"
-  rest.endpoint = ${?HBASE_REST_ENDPOINT}
-
   column.family = "d"
-  column.family = ${?HBASE_REST_COLUMN_FAMILY}
-
+  // In memory database used in test does not support namespaces so set to empty string
   namespace = ""
-  namespace = ${?HBASE_REST_NAMESPACE}
-
-  table.name = "data"
-  table.name = ${?HBASE_REST_TABLE_NAME}
-
-  in.memory = true
-
-  // In memory database does not support namespaces so set to empty string
-  namespace = ""
-
-//  namespace = "sbr_local_db"
-//  namespace = ${?HBASE_REST_NAMESPACE}
-//
-//  table.name = "enterprise"
-//  table.name = ${?HBASE_REST_TABLE_NAME}
+  table.name = "admin_data"
 }
 
-ws {
+play.ws {
   request.timeout = 15000
   request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
 }
