REG-353 Removed unused imports from guice Module class.  Changed name of env var to use same spelling of initialise as per config and the RepositoryInitializer class

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -166,7 +166,7 @@ hbase {
   table.name = ${?HBASE_TABLE_NAME}
 
   initialize = false
-  initialize = ${?HBASE_INITIALISE_DB}
+  initialize = ${?HBASE_INITIALIZE_DB}
 }
 
 play.ws {
