Fix/map reduce load (#28)
* Fixes to map reduce data load

- Removed use of env variables which don’t scale across a Hadoop
- Added addition job params and set these in the job config
- Fixed Hadoop file path separator
- Fixed HFile load directory
- Enabled SBT assembly for repository-hbase
- Added logback.xml for repository-abase
- Restore README file

* Set logging levels

- INFO for application code
- WARN for libraries

* Update Build.sbt

Added assembly setting back to repository-hbase project

* Update Common.scala

Added logback.xml merge rule

* Switched Jenkins pipeline shared lib to develop

* Fix unit tests

- Fixed loading of HBase test admin data
- Removed ability to override file columns headings

* Corrected gitlab branch

- Restore gitlab branch to develop

* Fix Jenkins build

* Fixed Jenkinsfile

* Reverted TestCache

- Reverted work in progress on test cache fix

* Set Jenkins shared library to master branch

- Deleted develop branch in gitlab
- Master branch to be used by default in pipelined

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,8 +98,10 @@ admin-data-hbase.hbase.repository {
 # CSV File Load
 csv.file = "conf/sample/201706/ch-data.csv"
 csv.file = ${?CSV_FILE}
+csv.id.position = 1
+csv.id.position= ${?ROWKEY_POSITION}
 csv.header.string = "companyname"
-csv.header.string =  ${?CSV_HEADER_STRING}
+csv.header.string = ${?HEADER_STRING}
 
 # Metrics
 api.metrics = false
