Changed routing approach

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,6 +80,9 @@ play.ws {
 
     loose.acceptAnyCertificate=true
   }
+
+  request.timeout = 15000
+  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
 }
 
 
@@ -192,9 +195,7 @@ hbase {
     endpoint = "http://localhost:8080"
     endpoint = ${?HBASE_REST_ENDPOINT}
   }
-}
 
-play.ws {
-  request.timeout = 15000
-  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
+  max.response.length = 12
+  max.response.length = ${?HBASE_MAX_RESP_LENGTH}
 }
