--- a/repository-hbase/src/test/resources/application.conf
+++ b/repository-hbase/src/test/resources/application.conf
@@ -33,6 +33,9 @@ hbase {
     endpoint = "http://localhost:8080"
     endpoint = ${?HBASE_REST_ENDPOINT}
   }
+
+  max.response.length = 12
+  max.response.length = ${?HBASE_MAX_RESP_LENGTH}
 }
 
 
