--- a/test/resources/application.test.conf
+++ b/test/resources/application.test.conf
@@ -4,7 +4,7 @@ include "application.conf"
 play.cache.createBoundCaches = false
 
 hbase {
-  in.memory = true
+  in.memory.init = true
   // In memory database does not support namespaces so set to empty string
   namespace = ""
 }
