REG-353 Refinements needed to database initialisation following further testing

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -143,7 +143,7 @@ cache {
 # Validation
 validation {
   idRegex = ".{3,8}"
-  idRegex = ${?validation.id}
+  idRegex = ${?SBR_VALIDATION_ID_REGEX}
 }
 
 hbase {
