Modified routing scheme and removed default history size

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -177,7 +177,8 @@ hbase {
   column.family = "d"
   column.family = ${?HBASE_REST_COLUMN_FAMILY}
 
-  table.name = "admin_data"
+//  table.name = "admin_data"
+  table.name = "enterprise"
   table.name = ${?HBASE_TABLE_NAME}
 
   in.memory {
@@ -195,7 +196,4 @@ hbase {
     endpoint = "http://localhost:8080"
     endpoint = ${?HBASE_REST_ENDPOINT}
   }
-
-  max.response.length = 12
-  max.response.length = ${?HBASE_MAX_RESP_LENGTH}
 }
