Temporarily ignored failing tests - for deployment POC

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,7 +78,8 @@ play.ws {
     #  ]
     #}
 
-    loose.acceptAnyCertificate=true
+    // NOTE accept all certs for debug
+//    loose.acceptAnyCertificate=true
   }
 
   request.timeout = 15000
