--- a/repository-hbase/src/test/resources/application.conf
+++ b/repository-hbase/src/test/resources/application.conf
@@ -19,7 +19,7 @@ hbase {
   table.name = ${?HBASE_TABLE_NAME}
 
   in.memory {
-    init = false
+    init = true
     init = ${?HBASE_IN_MEMORY_INIT}
 
     namespace = ""
@@ -33,9 +33,6 @@ hbase {
     endpoint = "http://localhost:8080"
     endpoint = ${?HBASE_REST_ENDPOINT}
   }
-
-  max.response.length = 12
-  max.response.length = ${?HBASE_MAX_RESP_LENGTH}
 }
 
 
