--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,7 @@ play.ws {
     #}
 
     // NOTE accept all certs for debug
-//    loose.acceptAnyCertificate=true
+    loose.acceptAnyCertificate=true
   }
 
   request.timeout = 15000
