REG-353 Dockerised Local Dev Environment (#31)
* REG-353 Added docker configuration settings along with hbase-site to point at hbase running in a container

* REG-353 Changes to support externalised hbase used in docker setup.  Includes ability to create namespace and table where they do not already exist.

* REG-353 Moved namespace and table creation into better home within the RepositoryInitializer class along with some useful logging.

* REG-353 Got ApplicationSpec tests to launch in-memory hbase since the application no longer does so

* REG-353 Removed unused imports from guice Module class.  Changed name of env var to use same spelling of initialise as per config and the RepositoryInitializer class

* REG-353 Refinements needed to database initialisation following further testing

* REG-353 Improved exception handling in RepositoryInitializer and in repository lookup in AdminDataController

* REG-353 Fixed unresolveable reference to HBase constant which is no longer available publicly

* REG-353 Changed the way tableName is passed to the BulkLoader along with additional logging in BulkLoader.  This means the namespace:table format is handled correctly between in-memory and external hbase

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,8 +8,10 @@ play.modules.enabled += "play.modules.swagger.SwaggerModule"
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret = "%APPLICATION_SECRET%"
-application.secret = ${?application.secret}
+# application.secret = "%APPLICATION_SECRET%"
+# application.secret = ${?application.secret}
+play.crypto.secret = "changeme"
+play.crypto.secret = ${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
@@ -143,7 +145,7 @@ cache {
 # Validation
 validation {
   idRegex = ".{3,8}"
-  idRegex = ${?validation.id}
+  idRegex = ${?SBR_VALIDATION_ID_REGEX}
 }
 
 hbase {
@@ -165,8 +167,8 @@ hbase {
   table.name = "admin_data"
   table.name = ${?HBASE_TABLE_NAME}
 
-  in.memory = false
-  in.memory = ${?DB_IN_MEMORY}
+  initialize = false
+  initialize = ${?HBASE_INITIALIZE_DB}
 }
 
 play.ws {
