--- a/conf/application.conf
+++ b/conf/application.conf
@@ -176,7 +176,7 @@ hbase {
   }
 
   column.family = "d"
-  column.family = ${?HBASE_REST_COLUMN_FAMILY}
+  column.family = ${?HBASE_COLUMN_FAMILY}
 
 //  table.name = "admin_data"
   table.name = "enterprise"
@@ -192,9 +192,9 @@ hbase {
 
   rest {
     namespace = "sbr_local_db"
-    namespace = ${?HBASE_REST_NAMESPACE}
+    namespace = ${?HBASE_NAMESPACE}
 
     endpoint = "http://localhost:8080"
-    endpoint = ${?HBASE_REST_ENDPOINT}
+    endpoint = ${?HBASE_ENDPOINT}
   }
 }
