Added new routes, change Module to scala and updated application config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,6 +4,17 @@
 # Swagger API Documentation
 play.modules.enabled += "play.modules.swagger.SwaggerModule"
 
+api.version = "alpha"
+swagger.filter = "SwaggerConfigurationFilter"
+swagger.api.info = {
+  title = "Statistical Business Register Admin Data API Group",
+  description = "One of the collection of Sbr Admin Data Apis",
+  contact = "SBR Support Team",
+  termsOfService = "https://www.ons.gov.uk/help/termsandconditions",
+  licence = "MIT",
+  licenceUrl = "https://github.com/ONSdigital/sbr-api/blob/master/LICENSE"
+}
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -82,8 +93,10 @@ play.ws {
 
     loose.acceptAnyCertificate=true
   }
-}
 
+  request.timeout = 15000
+  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
+}
 
 # Filters
 play.http.filters = filters.Filters
@@ -97,56 +110,62 @@ admin-data-hbase.hbase.repository {
   }
 }
 
+
 # CSV File Load
-csv.file = "conf/sample/201706/ch-data.csv"
-csv.file = ${?CSV_FILE}
-csv.id.position = 1
-csv.id.position= ${?ROWKEY_POSITION}
-csv.header.string = "companyname"
-csv.header.string = ${?HEADER_STRING}
+csv {
+  file = "conf/sample/201706/ch-data.csv"
+  file = ${?CSV_FILE}
+  header.string = "companyname"
+  header.string =  ${?HEADER_STRING}
+
+  id.position = 1
+  id.position= ${?ROWKEY_POSITION}
+}
 
 # Metrics
 api.metrics = false
 api.metrics = ${?API_METRICS}
 
 artifactory {
-  publish-init = false
-  publish-init = ${?BI_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
-  publish-hbase.hbase.repository = "https://Unused/transient/hbase.hbase.repository"
-  publish-hbase.hbase.repository = ${?BI_PUBLISH_ARTIFACTORY_NAME}
+  publish.init = false
+  publish.init = ${?SBR_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
+  publish.repository = "https://Unused/transient/admin-data.repository"
+  publish.repository = ${?SBR_PUBLISH_ARTIFACTORY_NAME}
   host = "Unknown Artifactory host"
-  host = ${?BI_PUBLISH_ARTIFACTORY_HOST_NAME}
+  host = ${?SBR_PUBLISH_ARTIFACTORY_HOST_NAME}
   user = "Unknown username"
-  user = ${?BI_PUBLISH_ARTIFACTORY_USER_NAME}
+  user = ${?SBR_PUBLISH_ARTIFACTORY_USER_NAME}
   password = "Unknown password"
-  password = ${?BI_PUBLISH_ARTIFACTORY_PASSWORD}
+  password = ${?SBR_PUBLISH_ARTIFACTORY_PASSWORD}
 }
 
 # Circuit-breaker
-circuitBreaker {
-  maxFailures = 5
-  maxFailures = ${?cb.maxFailures}
-  callTimeout = 2
-  callTimeout = ${?cb.callTimeout}
-  resetTimeout = 1
-  resetTimeout = ${?cb.resetTimeout}
+circuit.breaker {
+  max.failures = 5
+  max.failures = ${?CIRCUIT_BREAKER_MAX_FAILURE}
+  call.timeout = 2
+  call.timeout = ${?CIRCUIT_BREAKER_CALL_TIMEOUT}
+  reset.timeout = 1
+  reset.timeout = ${?CIRCUIT_BREAKER_RESET_TIMEOUT}
 }
 
 akka.ask.timeout = 2 seconds
+akka.ask.timeout = ${?AKKA_TIMEOUT}
 
 # Caching
 cache {
   duration = 60
-  duration = ${?cache.duration}
+  duration = ${?CACHE_DURATION}
   delimiter = "~"
-  delimiter = ${?cache.delimiter}
+  delimiter = ${?CACHE_DELIMINTER}
 }
 
 # Validation
 validation {
-  idRegex = ".{3,8}"
-  idRegex = ${?SBR_VALIDATION_ID_REGEX}
+  id.regex = ".{3,8}"
+  id.regex = ${?VALIDATION_ID}
 }
+
 
 hbase {
   authentication.username = "username"
@@ -171,7 +190,36 @@ hbase {
   initialize = ${?HBASE_INITIALIZE_DB}
 }
 
-play.ws {
-  request.timeout = 15000
-  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
+
+hbase {
+  authentication {
+    username = "username"
+    username = ${?HBASE_AUTHENTICATION_USERNAME}
+
+    password = "password"
+    password = ${?HBASE_AUTHENTICATION_PASSWORD}
+  }
+
+  column.family = "d"
+  column.family = ${?HBASE_COLUMN_FAMILY}
+
+  //  table.name = "admin_data"
+  table.name = "enterprise"
+  table.name = ${?HBASE_TABLE_NAME}
+
+  in.memory {
+    namespace = ""
+    namespace = ${?HBASE_IN_MEMORY_NAMESPACE}
+  }
+
+  rest {
+    namespace = "sbr_local_db"
+    namespace = ${?HBASE_NAMESPACE}
+
+    endpoint = "http://localhost:8080"
+    endpoint = ${?HBASE_ENDPOINT}
+  }
+
+  initialize = false
+  initialize = ${?HBASE_INITIALIZE_DB}
 }
