--- a/repository-hbase/src/test/resources/application.conf
+++ b/repository-hbase/src/test/resources/application.conf
@@ -4,16 +4,30 @@ admin-data-repository {
 }
 
 hbase {
-  authentication.username = "username"
-  authentication.password = "password"
-  rest.endpoint = "http://localhost:8080"
+  authentication {
+    username = "username"
+    password = "password"
+  }
+
   column.family = "d"
+
+  table.name = "data"
+
+  initialize = true
+
   // In memory database used in test does not support namespaces so set to empty string
-  namespace = ""
-  table.name = "admin_data"
+  in.memory {
+    namespace = ""
+  }
+
+  rest {
+    namespace = "sbr_local_db"
+
+    endpoint = "http://localhost:8080"
+  }
 }
+
 
 play.ws {
   request.timeout = 15000
-  request.timeout = ${?SBR_EXTERNAL_REQUEST_TIMEOUT}
 }
