--- a/conf/application.conf
+++ b/conf/application.conf
@@ -127,10 +127,17 @@ api.metrics = false
 api.metrics = ${?API_METRICS}
 
 artifactory {
-  publish.init = false
-  publish.init = ${?SBR_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
-  publish.repository = "https://Unused/transient/admin-data.repository"
-  publish.repository = ${?SBR_PUBLISH_ARTIFACTORY_NAME}
+  publish {
+    init = false
+    init = ${?SBR_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
+
+    repository = "https://Unused/transient/admin-data.repository"
+    repository = ${?SBR_PUBLISH_ARTIFACTORY_NAME}
+  }
+//  publish.init = false
+//  publish.init = ${?SBR_PUBLISH_ARTIFACTORY_INIT_TRIGGER}
+//  publish.repository = "https://Unused/transient/admin-data.repository"
+//  publish.repository = ${?SBR_PUBLISH_ARTIFACTORY_NAME}
   host = "Unknown Artifactory host"
   host = ${?SBR_PUBLISH_ARTIFACTORY_HOST_NAME}
   user = "Unknown username"
@@ -167,29 +174,33 @@ validation {
 }
 
 
-hbase {
-  authentication.username = "username"
-  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
+//hbase {
+//  authentication.username = "username"
+//  authentication.username = ${?HBASE_AUTHENTICATION_USERNAME}
+//
+//  authentication.password = "password"
+//  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
+//
+//  rest.endpoint = "http://localhost:8080"
+//  rest.endpoint = ${?HBASE_REST_ENDPOINT}
+//
+//  column.family = "d"
+//  column.family = ${?HBASE_REST_COLUMN_FAMILY}
+//
+//  namespace = "sbr_local_db"
+//  namespace = ${?HBASE_NAMESPACE}
+//
+//  table.name = "admin_data"
+//  table.name = ${?HBASE_TABLE_NAME}
+//
+//  initialize = false
+//  initialize = ${?HBASE_INITIALIZE_DB}
+//}
 
-  authentication.password = "password"
-  authentication.password = ${?HBASE_AUTHENTICATIONM_PASSWORD}
-
-  rest.endpoint = "http://localhost:8080"
-  rest.endpoint = ${?HBASE_REST_ENDPOINT}
-
-  column.family = "d"
-  column.family = ${?HBASE_REST_COLUMN_FAMILY}
-
-  namespace = "sbr_local_db"
-  namespace = ${?HBASE_NAMESPACE}
-
-  table.name = "admin_data"
-  table.name = ${?HBASE_TABLE_NAME}
-
-  initialize = false
-  initialize = ${?HBASE_INITIALIZE_DB}
+load.format {
+  reverse = false
+  reverse = ${?HBASE_LOAD_REVERSE_FLAG}
 }
-
 
 hbase {
   authentication {
