--- a/conf/application.conf
+++ b/conf/application.conf
@@ -219,7 +219,7 @@ hbase {
   table.name = ${?HBASE_TABLE_NAME}
 
   in.memory {
-    namespace = ""
+    namespace = "sbr_local_db"
     namespace = ${?HBASE_IN_MEMORY_NAMESPACE}
   }
 
