Changed application.test.conf initialize = true  ->>  initialize = false (may break other tests)

--- a/test/resources/application.test.conf
+++ b/test/resources/application.test.conf
@@ -4,7 +4,7 @@ include "application.conf"
 play.cache.createBoundCaches = false
 
 hbase {
-  initialize = true
+  initialize = false
   // In memory database used in tests does not support namespaces so set to empty string
   namespace = ""
 }
