--- a/conf/application.conf
+++ b/conf/application.conf
@@ -234,3 +234,24 @@ hbase {
   initialize = false
   initialize = ${?HBASE_INITIALIZE_DB}
 }
+
+kamon {
+  environment {
+    service = "sbr-control-api"
+  }
+
+  trace {
+    join-remote-parents-with-same-span-id = true
+    sampler = always
+    sampler = ${?SBR_TRACING_SAMPLER}
+  }
+
+  reporters = ["kamon.zipkin.ZipkinReporter"]
+
+  zipkin {
+    host = "localhost"
+    host = ${?SBR_TRACING_REPORTER_HOST}
+    port = 9411
+    port = ${?SBR_TRACING_REPORTER_PORT}
+  }
+}
